--- a/.github/workflows/build-and-deploy.yml
+++ b/.github/workflows/build-and-deploy.yml
@@ -33,7 +33,7 @@ jobs:
         uses: peaceiris/actions-gh-pages@v3
         with:
           publish_dir: ./public
-          deploy_key: ${{ secrets.PAGES_DEPLOY_TOKEN }}
+          personal_token: ${{ secrets.PAGES_DEPLOY_TOKEN }}
           external_repository: psu-cmg/psu-cmg.github.io
           publish_branch: master
           cname: cmg.psu.edu
